Cover Virgil Crypto with unit tests. Cover JWT with unit tests